--- a/ci/tasks/java_test.yml
+++ b/ci/tasks/java_test.yml
@@ -3,10 +3,16 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: codequest/ruby-golang-java-nodejs}
+  source:
+    repository: openjdk
+    tag: 8-jdk
 
 inputs:
   - name: repo
 
 run:
   path: repo/ci/scripts/java_test.sh
+
+caches:
+  - path: .gradle/
+  - path: .m2/
