--- a/ci/tasks/push.yml
+++ b/ci/tasks/push.yml
@@ -3,10 +3,19 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: codequest/ruby-golang-java-nodejs}
+  source:
+    repository: openjdk
+    tag: 8-jdk
 
 inputs:
   - name: repo
 
+outputs:
+  - name: artifacts
+
 run:
   path: repo/ci/scripts/push.sh
+
+caches:
+  - path: .gradle/
+  - path: .m2/
