update ci pipeline
#158010167

--- a/ci/manifest_development.yml
+++ b/ci/manifest_development.yml
@@ -1,6 +1,7 @@
 ---
 applications:
 - name: blang-board
+  host: blang-board-development
   buildpack: java_buildpack_offline
   memory: 1024M
   instances: 1
