--- a/ci/manifest_development.yml
+++ b/ci/manifest_development.yml
@@ -6,5 +6,7 @@ applications:
   memory: 1024M
   instances: 1
   path: application.jar
+  services:
+    - mysql
   env:
     JAVA_OPTS: -Djava.security.egd=file:///dev/urandom
