--- a/ci/manifest_release.yml
+++ b/ci/manifest_release.yml
@@ -5,5 +5,7 @@ applications:
   memory: 1024M
   instances: 1
   path: application.jar
+  services:
+    - mysql
   env:
     JAVA_OPTS: -Djava.security.egd=file:///dev/urandom
