--- a/application/manifest.yml
+++ b/application/manifest.yml
@@ -5,7 +5,7 @@ applications:
   buildpack: java_buildpack_offline
   memory: 1024M
   instances: 1
-  path: application.jar
+  path: target/application-0.0.1-SNAPSHOT.jar
   services:
     - blang-board-db
   env:
