--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -8,3 +8,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        default_schema: blang_board
+
+flyway:
+  baseline-on-migrate: true
