--- a/ci/manifest_release.yml
+++ b/ci/manifest_release.yml
@@ -6,6 +6,6 @@ applications:
   instances: 1
   path: application.jar
   services:
-    - mysql
+    - blang-board-db
   env:
     JAVA_OPTS: -Djava.security.egd=file:///dev/urandom
