--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -8,9 +8,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    properties:
-      hibernate:
-        default_schema: blang_board
 
 flyway:
   baseline-on-migrate: true
+
+---
+spring:
+  profiles: cloud
+
+  jpa:
+    properties:
+      hibernate:
+        default_schema: blang_board
