--- a/ci/tasks/java_test.yml
+++ b/ci/tasks/java_test.yml
@@ -4,8 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: openjdk
-    tag: 8-jdk
+    repository: jghiloni/spring-boot-rootfs
+    tag: 2.0-latest
 
 inputs:
   - name: repo
